--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>walkme checker</title>
+    <title>Walkme Analyzer</title>
 	<link href="css.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
 	<div id="script_info"></div>
 	<div id="settings"></div>
-    <script src="popup.js"></script><!-- скрипт, выполняющийся при нажатии на иконку расширения-->
+    <script src="popup.js"></script>
   </body>
 </html>
